--- a/AES.tex
+++ b/AES.tex
@@ -11,7 +11,7 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 
 Различные преобразования воздействуют на результат промежуточного шифрования, называемый \emph{состоянием} ($\mathsf{State}$). Состояние представлено $(4 \times 4)$-матрицей из байтов $a_{i,j}$.
 
-\emph{Ключ шифрования раунда} ($\mathsf{Key}$) также представляется прямоугольной $(4 \times \mathsf{Nk})$-матрицей из байтов $k_{i,j}$, где $\mathsf{Nk}$ равно длине ключа, разделённой на 32, то есть 4, 6 или 8.
+\emph{Ключ шифрования раунда} ($\mathsf{Key}$) также представляется прямоугольной $(4 \times \mathsf{N_k})$-матрицей из байтов $k_{i,j}$, где $\mathsf{N_k}$ равно длине ключа, разделённой на 32, то есть 4, 6 или 8.
 
 Эти представления приведены ниже:
 \[
@@ -35,17 +35,17 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 \emph{Входные} и \emph{выходные} блоки шифра AES рассматриваются как последовательности 16-ти байтов $(a_0, a_1, \dots, a_{15})$. Преобразование входного блока $(a_0, \dots, a_{15})$ в исходную $(4 \times 4)$-матрицу состояния $\mathsf{State}$ или преобразование конечной матрицы состояния в выходную последовательность проводится по правилу (запись по столбцам):
     \[ a_{i,j} = a_{i + 4j}, ~ i = 0 \dots 3, ~ j = 0 \dots 3. \]
 
-Аналогично ключ шифрования может рассматриваться как последовательность байтов $(k_0, k_1, \dots, k_{4 \cdot \mathsf{Nk} - 1})$, где $\mathsf{Nk} = 4, 6, 8$. Число байтов в этой последовательности равно 16, 24 или 32, а номера этих байтов находятся в интервалах $0 \dots 15$, $0 \dots 23$ или $0 \dots 31$ соответственно. $(4 \times \mathsf{Nk})$-матрица ключа шифрования $\mathsf{Key}$ задаётся по правилу:
-    \[ k_{i,j} = k_{i + 4j}, ~ i = 0 \dots 3, ~ j = 0 \dots \mathsf{Nk} - 1. \]
+Аналогично ключ шифрования может рассматриваться как последовательность байтов $(k_0, k_1, \dots, k_{4 \cdot \mathsf{N_k} - 1})$, где $\mathsf{N_k} = 4, 6, 8$. Число байтов в этой последовательности равно 16, 24 или 32, а номера этих байтов находятся в интервалах $0 \dots 15$, $0 \dots 23$ или $0 \dots 31$ соответственно. $(4 \times \mathsf{N_k})$-матрица ключа шифрования $\mathsf{Key}$ задаётся по правилу:
+    \[ k_{i,j} = k_{i + 4j}, ~ i = 0 \dots 3, ~ j = 0 \dots \mathsf{N_k} - 1. \]
 
-Число раундов $\mathsf{Nr}$ зависит от длины ключа. Его значения приведены в таблице ниже.
+Число раундов $\mathsf{N_r}$ зависит от длины ключа. Его значения приведены в таблице ниже.
 
 \begin{center}
     \begin{tabular}{|l|c|c|c|}
     \hline
     Длина ключа, биты           &128 & 192 & 256 \\
-    $\mathsf{Nk}$               & 4  & 6   & 8 \\
-    Число раундов $\mathsf{Nr}$ & 10 & 12 & 14 \\
+    $\mathsf{N_k}$               & 4  & 6   & 8 \\
+    Число раундов $\mathsf{N_r}$ & 10 & 12 & 14 \\
     \hline
     \end{tabular}
 \end{center}
@@ -136,13 +136,13 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 \subsubsection{Сдвиг строк $\mathsf{ShiftRows}$}
 
 Для выполнения операции <<сдвиг строк>> строки в таблице текущего состояния циклически сдвигаются влево. Величина сдвига различна для различных строк. Строка $0$ не сдвигается вообще. Строка $1$ сдвигается на $C_1=1$ позицию, строка $2$ -- на $C_2=2$ позиции, строка $3$ -- на $C_3=3$ позиции.
-%Величины $C1,C2$ и $C3$ зависят от $Nb$. Их значения приведены в таблице~\ref{tab:AES-shift-rows}.
+%Величины $C1,C2$ и $C3$ зависят от $N_b$. Их значения приведены в таблице~\ref{tab:AES-shift-rows}.
 %
 %\begin{table}[!ht]
 %    \centering
 %    \begin{tabular}{|c|c|c|c|}
 %        \hline
-%        Nb & C1 & C2 & C3 \\
+%        N_b & C1 & C2 & C3 \\
 %        \hline
 %        4  & 1  & 2  & 3  \\
 %        \hline
@@ -151,7 +151,7 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 %        8  & 1  & 3  & 4  \\
 %        \hline
 %    \end{tabular}
-%    \caption{Сдвиг $C$ и длина блока $Nb$.}
+%    \caption{Сдвиг $C$ и длина блока $N_b$.}
 %    \label{tab:AES-shift-rows}
 %\end{table}
 
@@ -221,27 +221,27 @@ AES -- это раундовый\index{шифр!раундовый} блочны
     \item ключи \emph{раунда} выбираются из \emph{расширенного} ключа по правилу: ключ первого раунда состоит из первых 4-х столбцов матрицы расширенного ключа, второй ключ -- из следующих 4-х столбцов и~т.\,д.
 \end{itemize}
 
-Расширенный ключ -- это матрица $\mathsf{W}$, состоящая из $4(\mathsf{Nr} + 1)$ 4-байтных вектор-столбцов, каждый столбец $i$ обозначается $\mathsf{W}[i]$.
+Расширенный ключ -- это матрица $\mathsf{W}$, состоящая из $4(\mathsf{N_r} + 1)$ 4-байтных вектор-столбцов, каждый столбец $i$ обозначается $\mathsf{W}[i]$.
 
-Далее рассматривается только случай, когда ключ шифра состоит из 16 байтов. Первые $\mathsf{Nk} = 4$ столбца содержат ключ шифра. Остальные столбцы вычисляются рекурсивно из столбцов с меньшими номерами.
+Далее рассматривается только случай, когда ключ шифра состоит из 16 байтов. Первые $\mathsf{N_k} = 4$ столбца содержат ключ шифра. Остальные столбцы вычисляются рекурсивно из столбцов с меньшими номерами.
 
-Для $\mathsf{Nk} = 4$ имеем 16-байтный ключ
+Для $\mathsf{N_k} = 4$ имеем 16-байтный ключ
 \[
     \mathsf{Key} = (\mathsf{Key}[0], \mathsf{Key}[1], \dots, \mathsf{Key}[15]).
 \]
-Приведём алгоритм расширения ключа для $\mathsf{Nk} = 4$.
+Приведём алгоритм расширения ключа для $\mathsf{N_k} = 4$.
 \begin{algorithm}[ht]
     \caption{$\mathsf{KeyExpansion}(\mathsf{Key}, \mathsf{W})$\label{alg:AES-key-exp}}
     \begin{algorithmic}
-        \FOR{ $i=0$ \TO $\mathsf{Nk} - 1$}
+        \FOR{ $i=0$ \TO $\mathsf{N_k} - 1$}
             \STATE $\mathsf{W}[i] = (\mathsf{Key}[4i], ~ \mathsf{Key}[4i+1], ~ \mathsf{Key}[4i+2], ~ \mathsf{Key}[4i+3])^T$;
         \ENDFOR
-        \FOR{ $i = \mathsf{Nk}$ \TO $4(\mathsf{Nr} + 1) - 1$}
+        \FOR{ $i = \mathsf{N_k}$ \TO $4(\mathsf{N_r} + 1) - 1$}
             \STATE $\mathsf{temp} = \mathsf{W}[i-1]$;
-            \IF{ ($i = 0 \mod \mathsf{Nk}$)}
-                \STATE $\mathsf{temp} = \mathsf{SubWord}(\mathsf{RotWord}(\mathsf{temp})) ~ \oplus ~ \mathsf{Rcon}[i ~/~ \mathsf{Nk}]$;
+            \IF{ ($i = 0 \mod \mathsf{N_k}$)}
+                \STATE $\mathsf{temp} = \mathsf{SubWord}(\mathsf{RotWord}(\mathsf{temp})) ~ \oplus ~ \mathsf{Rcon}[i ~/~ \mathsf{N_k}]$;
             \ENDIF
-            \STATE $\mathsf{W}[i] = \mathsf{W}[i - \mathsf{Nk}] ~ \oplus ~ \mathsf{temp}$;
+            \STATE $\mathsf{W}[i] = \mathsf{W}[i - \mathsf{N_k}] ~ \oplus ~ \mathsf{temp}$;
         \ENDFOR
     \end{algorithmic}
 \end{algorithm}
@@ -249,13 +249,13 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 %\[
 %    \begin{array}{l}
 %        \mathsf{KeyExpansion}(\mathsf{Key}, \mathsf{W}) \{ \\
-%        ~~~~ \mathsf{for ~ (i = 0; ~ i < Nk = 4; ~ i++)} \\
+%        ~~~~ \mathsf{for ~ (i = 0; ~ i < N_k = 4; ~ i++)} \\
 %        ~~~~~~~~ \mathsf{W[i] = (Key[4 \cdot i], ~ Key[4*i+1], ~ Key[4*i+2], ~ Key[4*i+3]);} \\
-%        ~~~~ \mathsf{for ~ (i = Nk; ~ i < 4 * (Nr + 1); ~ i++)} ~ \{ \\
+%        ~~~~ \mathsf{for ~ (i = N_k; ~ i < 4 * (N_r + 1); ~ i++)} ~ \{ \\
 %        ~~~~~~~~ \mathsf{temp = W[i-1];} \\
-%        ~~~~~~~~ \mathsf{if ~ (i ~ \% ~ Nk ~ == ~ 0)} \\
-%        ~~~~~~~~~~~~ \mathsf{temp = SubWord(RotWord(temp))} ~ \oplus ~ \mathsf{Rcon[i / Nk];} \\
-%        ~~~~~~~~ \mathsf{W[i] = W[i - Nk]} ~ \oplus ~ \mathsf{temp;} \\
+%        ~~~~~~~~ \mathsf{if ~ (i ~ \% ~ N_k ~ == ~ 0)} \\
+%        ~~~~~~~~~~~~ \mathsf{temp = SubWord(RotWord(temp))} ~ \oplus ~ \mathsf{Rcon[i / N_k];} \\
+%        ~~~~~~~~ \mathsf{W[i] = W[i - N_k]} ~ \oplus ~ \mathsf{temp;} \\
 %        ~~~~ \} \\
 %        \} \\
 %    \end{array}
@@ -263,36 +263,36 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 
 Здесь $\mathsf{SubWord}(\mathsf{W}[i])$ обозначает функцию, которая применяет операцию <<замена байтов>> (или s-блок) $\mathsf{SubBytes}$ к каждому из 4-х байтов столбца $\mathsf{W}[i]$. Функция $\mathsf{RotWord}(\mathsf{W}[i])$ осуществляет циклический сдвиг вверх байт столбца $\mathsf{W}[i]$: если $\mathsf{W}[i] = (a, b, c, d)^T$, то $\mathsf{RotWord}(\mathsf{W}[i]) = (b, c, d, a)^T$. Векторы-константы $\mathsf{Rcon}[i]$ определены ниже.
 
-Как видно из этого описания, первые $\mathsf{Nk} = 4$ столбца заполняются ключом шифра. Все следующие столбцы $\mathsf{W}[i]$ равны сумме по модулю $2$ предыдущего столбца $\mathsf{W}[i-1]$ и столбца $\mathsf{W}[i-4]$. Для столбцов $\mathsf{W}[i]$ с номерами $i$, кратными $\mathsf{Nk} = 4$, к столбцу $\mathsf{W}[i-1]$ применяются операции $\mathsf{RotWord(W)}$ и $\mathsf{SubWord(W)}$, а затем производится суммирование по модулю 2 со столбцом $\mathsf{W}[i-4]$ и константой раунда $\mathsf{Rcon}[i ~/~ 4]$.
+Как видно из этого описания, первые $\mathsf{N_k} = 4$ столбца заполняются ключом шифра. Все следующие столбцы $\mathsf{W}[i]$ равны сумме по модулю $2$ предыдущего столбца $\mathsf{W}[i-1]$ и столбца $\mathsf{W}[i-4]$. Для столбцов $\mathsf{W}[i]$ с номерами $i$, кратными $\mathsf{N_k} = 4$, к столбцу $\mathsf{W}[i-1]$ применяются операции $\mathsf{RotWord(W)}$ и $\mathsf{SubWord(W)}$, а затем производится суммирование по модулю 2 со столбцом $\mathsf{W}[i-4]$ и константой раунда $\mathsf{Rcon}[i ~/~ 4]$.
 
-%Для $\mathsf{Nk}>6$ имеем
+%Для $\mathsf{N_k}>6$ имеем
 %\[
 %\begin{array}{l}
-% \mathsf{KeyExpansion\,(byte\,Key\,[4*Nk]\,\, word \,\, W[Nb*(Nr+1)])}\\
+% \mathsf{KeyExpansion\,(byte\,Key\,[4*N_k]\,\, word \,\, W[N_b*(N_r+1)])}\\
 %  \{\\
-% \quad\quad \mathsf{for\,\,(i=0;\,\, i<Nk;\,\,i++)} \\
+% \quad\quad \mathsf{for\,\,(i=0;\,\, i<N_k;\,\,i++)} \\
 %  \qquad \quad\quad\quad \mathsf{W[i]=(Key[4*i];Key[4*i+1];Key[4*i+2];Key[4*i+3]);}\\
-%  \quad\quad \mathsf{for \,\,(i=Nk;\,\,i<Nb*(Nr+1);\,\,i++)}\\
+%  \quad\quad \mathsf{for \,\,(i=N_k;\,\,i<N_b*(N_r+1);\,\,i++)}\\
 %  \quad\quad \{ \\
 %  \quad \quad\quad\quad \mathsf{temp=W[i-1]}; \\
-%  \quad \quad\quad\quad \mathsf{if\,\,(i\quad\% \quad Nk==0)}\\
-%  \qquad \qquad \qquad \quad \mathsf{temp=SubByte(RotByte(temp))\quad\widehat{\,}\quad Rcon[i/Nk]};\\
-%\quad \quad\quad\quad \mathsf{else \,\,if\,\,(i\quad\% \quad Nk==4)}\\
+%  \quad \quad\quad\quad \mathsf{if\,\,(i\quad\% \quad N_k==0)}\\
+%  \qquad \qquad \qquad \quad \mathsf{temp=SubByte(RotByte(temp))\quad\widehat{\,}\quad Rcon[i/N_k]};\\
+%\quad \quad\quad\quad \mathsf{else \,\,if\,\,(i\quad\% \quad N_k==4)}\\
 % \qquad \qquad \qquad \quad \mathsf{temp=SubByte(temp)};\\
-%  \quad \quad\quad\quad \mathsf{W[i]=W[i-Nk] \quad\widehat{\,}\quad temp};\\
+%  \quad \quad\quad\quad \mathsf{W[i]=W[i-N_k] \quad\widehat{\,}\quad temp};\\
 %  \quad\quad \} \\
 %  \}\, \\
 %\end{array}
 %\]
 %Различие между этими двумя случаями состоит в том, что во втором случае к столбцу $\mathsf{W[i-1]}$ применяются операции
-% $\mathsf{RotByte(W)}$ и $\mathsf{SubByte(W)}$, если $\mathsf{i-4}$ кратно $\mathsf{Nk}$.\\
+% $\mathsf{RotByte(W)}$ и $\mathsf{SubByte(W)}$, если $\mathsf{i-4}$ кратно $\mathsf{N_k}$.\\
 
 Векторы-константы раундов определяются следующим образом:
     \[ \mathsf{Rcon}[i] = (\mathsf{RC}[i], \mathrm{'00'}, \mathrm{'00'}, \mathrm{'00'})^T, \]
 где байт $\mathsf{RC}[1] = \mathrm{'01'}$, а байты $\mathsf{RC}[i] = \alpha^{i-1}, ~ i = 2, 3, \dots$. Байт $\alpha = \mathrm{'02'}$ -- это примитивный элемент поля $\GF{2^8}$.
 
 \example
-Пусть $\mathsf{Nk} = 4$. В этом случае ключ шифра имеет длину 128 бит. Найдём столбцы расширенного ключа. Столбцы $\mathsf{W}[0], \mathsf{W}[1], \mathsf{W}[2], \mathsf{W}[3]$ непосредственно заполняются битами ключа шифра. Номер следующего столбца $\mathsf{W}[4]$ кратен $\mathsf{Nk}$, поэтому
+Пусть $\mathsf{N_k} = 4$. В этом случае ключ шифра имеет длину 128 бит. Найдём столбцы расширенного ключа. Столбцы $\mathsf{W}[0], \mathsf{W}[1], \mathsf{W}[2], \mathsf{W}[3]$ непосредственно заполняются битами ключа шифра. Номер следующего столбца $\mathsf{W}[4]$ кратен $\mathsf{N_k}$, поэтому
 \[
     \mathsf{W}[4] = \mathsf{SubWord}(\mathsf{RotWord}(\mathsf{W}[3])) \oplus \mathsf{W}[0] \oplus
         \left[ \begin{array}{c}
@@ -327,8 +327,8 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 \exampleend
 
 %\example
-%Пусть $\mathsf{Nk=6}.$ В этом случае ключ шифра имеет длину 192 бита. Найдём столбцы расширенного ключа. Столбцы $\mathsf{W[0],W[1],W[2],W[3],W[4],W[5]}$ непосредственно заполняются
-%битами ключа шифра. Номер следующего столбца $\mathsf{W[6]}$ кратен $\mathsf{Nk}$, поэтому
+%Пусть $\mathsf{N_k=6}.$ В этом случае ключ шифра имеет длину 192 бита. Найдём столбцы расширенного ключа. Столбцы $\mathsf{W[0],W[1],W[2],W[3],W[4],W[5]}$ непосредственно заполняются
+%битами ключа шифра. Номер следующего столбца $\mathsf{W[6]}$ кратен $\mathsf{N_k}$, поэтому
 %\[
 %\begin{array}{ccccccc}
 % \mathsf{W[6]} & = & \mathsf{SubByte(RotByte(W[5]))} &\oplus  &  \mathsf{W[0]} & \oplus  & \left[ \begin{array}{c}
@@ -369,9 +369,9 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 %\exampleend
 %
 %\example
-%Пусть $\mathsf{Nk=8}.$ В этом случае ключ шифра имеет длину $256$ бита. Найдём столбцы расширенного ключа. Столбцы
+%Пусть $\mathsf{N_k=8}.$ В этом случае ключ шифра имеет длину $256$ бита. Найдём столбцы расширенного ключа. Столбцы
 %$\mathsf{W[0],W[1],W[2],W[3],W[4],W[5],W[6],W[7]}$ непосредственно заполняются битами ключа шифра. Номер следующего столбца
-%$\mathsf{W[8]}$ кратен $\mathsf{Nk}$, поэтому
+%$\mathsf{W[8]}$ кратен $\mathsf{N_k}$, поэтому
 %\[
 %\begin{array}{ccccccc}
 % \mathsf{W[8]} & = & \mathsf{SubByte(RotByte(W[7]))} &\oplus  &  \mathsf{W[0]} & \oplus  & \left[ \begin{array}{c}
@@ -390,7 +390,7 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 %\mathsf{ W[10]=W[9]}\oplus \mathsf{W[4]}; & \mathsf{W[11]=W[10]}\oplus \mathsf{W[5]}.\\
 %\end{array}
 %\]
-%Номер следующего столбца $\mathsf{W[12]}$ равен $12$. Так как $12-4$ кратно $\mathsf{Nk}$, то
+%Номер следующего столбца $\mathsf{W[12]}$ равен $12$. Так как $12-4$ кратно $\mathsf{N_k}$, то
 %\[
 %\begin{array}{ccc}
 %\mathsf{ W[12]=SubByte(RotByte(W[11]))}\oplus \mathsf{W[4]}; & \mathsf{W[13]=W[12]}\oplus \mathsf{W[5]}; & \mathsf{W[14]=W[13]}\oplus \mathsf{W[6]}; \\
@@ -427,7 +427,7 @@ AES -- это раундовый\index{шифр!раундовый} блочны
 \[
     \mathsf{RoundKey} = (\mathsf{W}[4(i-1)], \mathsf{W}[4(i-1) + 1], \ldots, \mathsf{W}[4i-1]).
 \]
-%Если длина блока равна 192 битам $Nb=6$, то ключ 5-го раунда состоит из столбцов $W[24],W[25],W[26],W[27],W[28],W[29].$
+%Если длина блока равна 192 битам $N_b=6$, то ключ 5-го раунда состоит из столбцов $W[24],W[25],W[26],W[27],W[28],W[29].$
 %\exampleend
 
 В настоящее время американский стандарт шифрования AES де-факто используется во всём мире в негосударственных системах передачи данных, если позволяет законодательство страны. C 2010 года процессоры Intel поддерживают специальный набор инструкций для шифра AES.
